# pocket-tts-server

./: .gitignore  EDGE_TTS.md  INTEL_ARC.md  ISSUE_TEMPLATE.md  LLM_INTEGRATION.md  PIPER.md  PR_TEMPLATE.md  README.md  WYOMING.md  audio_utils.py  check_gpu.py  config.json  fix_dependencies.bat  install_pocket_tts.bat  openai_client_example.py  pocket_tts_api.py  preflight_checks.bat  pyproject.toml  requirements-dev.txt  requirements.txt  run_pocket_tts.bat  web_client.html  wyoming_protocol.py
templates/: index.html
tests/: conftest.py  test_api.py  test_sentences.py  test_wyoming.py
